/*
 * Licensed to the Apache Software Foundation (ASF) under one or more contributor license
 * agreements. See the NOTICE file distributed with this work for additional information regarding
 * copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance with the License. You may obtain a
 * copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under the License
 * is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
 * or implied. See the License for the specific language governing permissions and limitations under
 * the License.
 */

/*
* These ProtoBuf files are part of an experimental interface.
* Use this interface at your own risk.
*/

syntax = "proto3";
package org.apache.geode.internal.protocol.protobuf.v1;

import "v1/region_API.proto";
import "v1/locator_API.proto";
import "v1/basicTypes.proto";
import "v1/connection_API.proto";

message Message {
    oneof messageType {
        Request request = 1;
        Response response = 2;
    }
}

message Request {
    oneof requestAPI {
        PutRequest putRequest = 10;
        GetRequest getRequest = 11;
        PutAllRequest putAllRequest = 12;
        GetAllRequest getAllRequest = 13;
        RemoveRequest removeRequest = 14;

        GetServerRequest getServerRequest = 40;

        GetRegionNamesRequest getRegionNamesRequest = 41;
        GetRegionRequest getRegionRequest = 42;

        AuthenticationRequest authenticationRequest = 100;
    }
}

message Response {
    oneof responseAPI {
        PutResponse putResponse = 10;
        GetResponse getResponse = 11;
        PutAllResponse putAllResponse = 12;
        GetAllResponse getAllResponse = 13;
        RemoveResponse removeResponse = 14;

        GetServerResponse getServerResponse = 40;

        GetRegionNamesResponse getRegionNamesResponse = 41;
        GetRegionResponse getRegionResponse = 42;

        AuthenticationResponse authenticationResponse = 100;

        ErrorResponse errorResponse = 1000;
    }
}

message ErrorResponse {
    Error error = 1;
}
