/*
 * Licensed to the Apache Software Foundation (ASF) under one or more contributor license
 * agreements. See the NOTICE file distributed with this work for additional information regarding
 * copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the
 * "License"); you may not use this file except in compliance with the License. You may obtain a
 * copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software distributed under the License
 * is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
 * or implied. See the License for the specific language governing permissions and limitations under
 * the License.
 */

syntax = "proto3";
package org.apache.geode.protocol.protobuf;

import "google/protobuf/any.proto";
import "google/protobuf/empty.proto";

message Entry {
    EncodedValue key = 1;
    EncodedValue value = 2;
}

message EncodedValue {
    EncodingType encodingType = 1;
    bytes value = 2;
}

enum EncodingType {
    INVALID = 0;
    INT = 1;
    LONG = 2;
    SHORT = 3;
    BYTE = 4;
    BOOLEAN = 5;
    BINARY = 6;
    FLOAT = 7;
    DOUBLE = 8;
    STRING = 9;
    JSON = 10;
}

message CallbackArguments {
    oneof callbackArgs {
        google.protobuf.Empty hasCallbackArgument = 1;
        EncodedValue callbackValue = 2;
    }
}

message Region {
    string name = 1;
    // TODO: key, value types?
}

message Server {
    string url = 1;
}